--- a/index.html
+++ b/index.html
@@ -1,15 +1,28 @@
 <!DOCTYPE html>
 
-<html lang="en">
+<html lang="fr">
 
 <head>
   <meta charset="UTF-8">
+
+  <!-- Responsive -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+  <!-- CSS sous plusieurs formats-->
   <link rel="stylesheet" href="./css/style.css">
-  <link rel="stylesheet" media="screen and (max-width: 1500px)" href="./css/resolution.css" />
+  <link rel="stylesheet" href="./css/mobile.css"/>
+  <link rel="stylesheet" href="./css/tablette.css">
+  <link rel="stylesheet" href="./css/landscape.css">
+  <link rel="stylesheet" href="./css/laptop.css">
+
+  <!-- Icon onglet -->
+  <link rel="shortcut icon" href="./images/logo/favicon.ico">
+
+  <!-- Lien Font -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+
   <title>Reservia</title>
   <script src="https://kit.fontawesome.com/ae69335240.js" crossorigin="anonymous"></script>
 </head>
@@ -20,7 +33,7 @@
 
   <header>
     <nav>
-      <img src="./images/logo/Reservia@3x.png" alt="Logo">
+      <img src="./images/logo/Reservia.svg" alt="Logo">
       <ul class="navbar">
         <li class="element"><a href="">Hébergements</a></li>
         <li class="element"><a href="">Activités</a></li>
@@ -30,18 +43,20 @@
   </header>
 
   <section>
-
+    <!-- Introduction -->
     <div id="intro">
       <h1>Trouver votre hébergement pour des vacances de rêves</h1>
       <p>En plein centre ville ou en pleine nature</p>
     </div>
 
+    <!-- Searchbar -->
     <div id="searchbar">
       <span id="icon"><i class="fas fa-map-marker-alt"></i></span>
       <input id="city" type="text" placeholder="Marseille, France">
       <button id="search_button" type="button"><span>Rechercher</span><i class="fas fa-search"></i></button>
     </div>
 
+    <!-- Filtres -->
     <div class="filtre">
       <p>Filtres</p>
       <ul class="list">
@@ -52,6 +67,7 @@
       </ul>
     </div>
 
+    <!-- Information -->
     <div class="info">
       <span id="icon_info"><i class="fas fa-info"></i></span>
       <p>Plus de 500 logements sont disponobles dans cette ville</p>
@@ -60,11 +76,13 @@
 
   <main class="main">
 
+    <!-- Hébergements -->
+
     <section class="section1">
       <h2>Hébergements à Marseille</h2>
       <div class="container">
         <article>
-          <a href="" class="item1">
+          <a href="">
             <img src="./images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="auberge">
             <h3>Auberge la Cannebière</h3>
             <p>Nuit à partir de <strong>25€</strong></p>
@@ -79,7 +97,7 @@
         </article>
 
         <article>
-          <a href="" class="item2">
+          <a href="">
             <img src="./images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="chambre d'hôtel">
             <h3>Hôtel du port</h3>
             <p>Nuit à partir de 52<strong>€</strong> </p>
@@ -94,7 +112,7 @@
         </article>
 
         <article>
-          <a href="" class="item3">
+          <a href="">
             <img src="./images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="chambre d'hôtel">
             <h3>Hôtel Les mouettes</h3>
             <p>Nuit à partir de 76<strong>€</strong></p>
@@ -109,7 +127,7 @@
         </article>
 
         <article>
-          <a href="" class="item4">
+          <a href="">
             <img src="./images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="chambre d'hôtel">
             <h3>Hôtel de la mer</h3>
             <p>Nuit à partir de 46<strong>€</strong></p>
@@ -124,7 +142,7 @@
         </article>
 
         <article>
-          <a href="" class="item5">
+          <a href="">
             <img src="./images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="chambre d'hôtel">
             <h3>Auberge Le Panier</h3>
             <p>Nuit à partir de <strong>23€</strong></p>
@@ -139,7 +157,7 @@
         </article>
 
         <article>
-          <a href="" class="item6">
+          <a href="">
             <img src="./images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="chambre d'hôtel">
             <h3>Hôtel chez Amina</h3>
             <p>Nuit à partir de 96<strong>€</strong></p>
@@ -160,6 +178,9 @@
     </section>
 
     <aside>
+
+      <!-- Populaire -->
+
       <div class="populaires">
         <h2>Les plus populaires</h2>
          <i class="fas fa-chart-line"></i>
