--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 
   <!-- CSS sous plusieurs formats-->
   <link rel="stylesheet" href="./css/style.css">
-  <link rel="stylesheet" href="./css/mobile.css"/>
+  <link rel="stylesheet" href="./css/mobile.css" />
   <link rel="stylesheet" href="./css/tablette.css">
-  <link rel="stylesheet" href="./css/landscape.css">
-  <link rel="stylesheet" href="./css/laptop.css">
+  <!-- <link rel="stylesheet" href="./css/landscape.css">
+  <link rel="stylesheet" href="./css/laptop.css"> -->
 
   <!-- Icon onglet -->
   <link rel="shortcut icon" href="./images/logo/favicon.ico">
@@ -74,214 +74,250 @@
     </div>
   </section>
 
-  <main class="main">
+  <main>
+    <div class="main">
+      <!-- Hébergements -->
 
-    <!-- Hébergements -->
+      <section class="section1">
+        <h2>Hébergements à Marseille</h2>
+        <div class="container">
+          <article>
+            <a href="">
+              <img src="./images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="auberge">
+              <h3>Auberge la Cannebière</h3>
+              <p>Nuit à partir de <strong>25€</strong></p>
+              <div class="star">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <span class="grey_star"><i class="fas fa-star"></i></span>
+              </div>
+            </a>
+          </article>
 
-    <section class="section1">
-      <h2>Hébergements à Marseille</h2>
-      <div class="container">
-        <article>
+          <article>
+            <a href="">
+              <img src="./images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="chambre d'hôtel">
+              <h3>Hôtel du port</h3>
+              <p>Nuit à partir de 52<strong>€</strong> </p>
+              <div class="star">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+              </div>
+            </a>
+          </article>
+
+          <article>
+            <a href="">
+              <img src="./images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="chambre d'hôtel">
+              <h3>Hôtel Les mouettes</h3>
+              <p>Nuit à partir de 76<strong>€</strong></p>
+              <div class="star">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <span class="grey_star"><i class="fas fa-star"></i></span>
+              </div>
+            </a>
+          </article>
+
+          <article>
+            <a href="">
+              <img src="./images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="chambre d'hôtel">
+              <h3>Hôtel de la mer</h3>
+              <p>Nuit à partir de 46<strong>€</strong></p>
+              <div class="star">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <span class="grey_star"><i class="fas fa-star"></i></span>
+                <span class="grey_star"><i class="fas fa-star"></i></span>
+              </div>
+            </a>
+          </article>
+
+          <article>
+            <a href="">
+              <img src="./images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="chambre d'hôtel">
+              <h3>Auberge Le Panier</h3>
+              <p>Nuit à partir de <strong>23€</strong></p>
+              <div class="star">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <span class="grey_star"><i class="fas fa-star"></i></span>
+              </div>
+            </a>
+          </article>
+
+          <article>
+            <a href="">
+              <img src="./images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="chambre d'hôtel">
+              <h3>Hôtel chez Amina</h3>
+              <p>Nuit à partir de 96<strong>€</strong></p>
+              <div class="star">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+              </div>
+            </a>
+          </article>
+        </div>
+
+        <div class="link">
+          <a href="">Afficher plus</a>
+        </div>
+      </section>
+
+      <aside>
+
+        <!-- Populaire -->
+
+        <div class="populaires">
+          <h2>Les plus populaires</h2>
+          <i class="fas fa-chart-line"></i>
+        </div>
+        <div class="sidebar">
           <a href="">
-            <img src="./images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="auberge">
-            <h3>Auberge la Cannebière</h3>
-            <p>Nuit à partir de <strong>25€</strong></p>
-            <div class="star">
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <span class="grey_star"><i class="fas fa-star"></i></span>
+            <img src="./images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="chambre d'hôtel">
+            <div class="right">
+              <h3>Hôtel Le soleil du <br> matin</h3>
+              <p>Nuit à partir de 128<strong>€</strong></p>
+              <div class="star">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+              </div>
             </div>
           </a>
-        </article>
 
-        <article>
           <a href="">
-            <img src="./images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="chambre d'hôtel">
-            <h3>Hôtel du port</h3>
-            <p>Nuit à partir de 52<strong>€</strong> </p>
-            <div class="star">
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
+            <img src="./images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="chambre d'hôtel">
+            <div class="right">
+              <h3>Au coeur de l'eau <br>Chambres d'hôtes</h3>
+              <p>Nuit à partir de 71<strong>€</strong></p>
+              <div class="star">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <span class="grey_star"><i class="fas fa-star"></i></span>
+              </div>
             </div>
           </a>
-        </article>
 
-        <article>
           <a href="">
-            <img src="./images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="chambre d'hôtel">
-            <h3>Hôtel Les mouettes</h3>
-            <p>Nuit à partir de 76<strong>€</strong></p>
-            <div class="star">
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <span class="grey_star"><i class="fas fa-star"></i></span>
+            <img src="./images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="chambre d'hôtel">
+            <div class="right">
+              <h3>Hôtel Tout bleu et <br>Blanc</h3>
+              <p>Nuit à partir de 68<strong>€</strong></p>
+              <div class="star">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <span class="grey_star"><i class="fas fa-star"></i></span>
+              </div>
             </div>
           </a>
-        </article>
+        </div>
+      </aside>
+    </div>
 
-        <article>
+    <!-- Activités -->
+     <section class="section2">
+      <h2>Activités à Marseilles</h2>
+      <div class="block">
           <a href="">
-            <img src="./images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="chambre d'hôtel">
-            <h3>Hôtel de la mer</h3>
-            <p>Nuit à partir de 46<strong>€</strong></p>
-            <div class="star">
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <span class="grey_star"><i class="fas fa-star"></i></span>
-              <span class="grey_star"><i class="fas fa-star"></i></span>
+            <div class="large">
+              <img src="./images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Port">
+              <h3>Vieux Port</h3>
             </div>
           </a>
-        </article>
 
-        <article>
-          <a href="">
-            <img src="./images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="chambre d'hôtel">
-            <h3>Auberge Le Panier</h3>
-            <p>Nuit à partir de <strong>23€</strong></p>
-            <div class="star">
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <span class="grey_star"><i class="fas fa-star"></i></span>
-            </div>
-          </a>
-        </article>
+         <div class="block1">
+           <a href="">
+             <div class="medium">
+               <img src="./images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Château fort">
+               <h3>Fort de Pomègues</h3>
+             </div>
+           </a>
 
-        <article>
-          <a href="">
-            <img src="./images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="chambre d'hôtel">
-            <h3>Hôtel chez Amina</h3>
-            <p>Nuit à partir de 96<strong>€</strong></p>
-            <div class="star">
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-            </div>
-          </a>
-        </article>
-      </div>
+           <a href="">
+             <div class="small">
+               <img src="./images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Ile du frioul">
+               <h3>Iles du Frioul</h3>
+             </div>
+           </a>
 
-      <div class="link">
-        <a href="">Afficher plus</a>
+         </div>
+
+         <a href="">
+          <div class="large">
+            <img src="./images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="parc national des Calanques">
+            <h3>Parc National des Calanques</h3>
+          </div>
+         </a>
+
+        <div class="block1">
+         <a href="">
+           <div class="moyen">
+             <img src="./images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Notre Dame de la Garde">
+             <h3>Notre-Dame-de-la-Garde</h3>
+           </div>
+         </a>
+
+         <a href="">
+           <div class="moyen">
+             <img src="./images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="parc Longchamp">
+             <h3>Parc Longchamp</h3>
+           </div>
+         </a>
+       </div>
+
       </div>
     </section>
 
-    <aside>
-
-      <!-- Populaire -->
-
-      <div class="populaires">
-        <h2>Les plus populaires</h2>
-         <i class="fas fa-chart-line"></i>
-      </div>
-      <div class="sidebar">
-        <a href="">
-          <img src="./images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="chambre d'hôtel">
-              <div class="right">
-                 <h3>Hôtel Le soleil du  <br> matin</h3>
-                 <p>Nuit à partir de 128<strong>€</strong></p>
-                   <div class="star">
-                     <i class="fas fa-star"></i>
-                     <i class="fas fa-star"></i>
-                     <i class="fas fa-star"></i>
-                     <i class="fas fa-star"></i>
-                     <i class="fas fa-star"></i>
-                   </div>
-                </div>
-             </a>
-
-             <a href="">
-               <img src="./images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="chambre d'hôtel">
-               <div class="right">
-                 <h3>Au coeur de l'eau <br>Chambres d'hôtes</h3>
-                 <p>Nuit à partir de 71<strong>€</strong></p>
-                   <div class="star">
-                     <i class="fas fa-star"></i>
-                     <i class="fas fa-star"></i>
-                     <i class="fas fa-star"></i>
-                     <i class="fas fa-star"></i>
-                     <span class="grey_star"><i class="fas fa-star"></i></span>
-                   </div>
-               </div>
-             </a>
-
-             <a href="">
-               <img src="./images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="chambre d'hôtel">
-               <div class="right">
-                 <h3>Hôtel Tout bleu et <br>Blanc</h3>
-                 <p>Nuit à partir de 68<strong>€</strong></p>
-                   <div class="star">
-                     <i class="fas fa-star"></i>
-                     <i class="fas fa-star"></i>
-                     <i class="fas fa-star"></i>
-                     <i class="fas fa-star"></i>
-                     <span class="grey_star"><i class="fas fa-star"></i></span>
-                   </div>
-               </div>
-             </a>
-      </div>
-    </aside>
   </main>
-  <!--
-  <section>
-    <h2>Activités à Marseilles</h2>
-    <div class="section2">
-      <article>
-        <a href="" class="large">
-          <img src="./images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Port">
-        </a>
-      </article>
 
-      <div class="column">
-        <article>
-          <a href="" class="medium">
-            <img src="./images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Château fort">
-          </a>
-        </article>
-
-        <article>
-          <a href="" class="small">
-            <img src="./images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Ile du frioul">
-          </a>
-        </article>
+  <!-- <footer>
+    <div id="footer">
+      <div class="footer_item">
+        <h4>A propos</h4>
+        <ul>
+          <li><a href="">Fonctionnement du site</a></li>
+          <li><a href="">Conditions générales de vente</a></li>
+          <li><a href="">Données et confidentialité</a></li>
+        </ul>
       </div>
 
-      <article>
-        <a href="" class="large">
-          <img src="./images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="">
-        </a>
-      </article>
+      <div class="footer_item">
+        <h4>Nos hébergements</h4>
+        <ul>
+          <li><a href="">Charte qualité</a></li>
+          <li><a href="">Soumettre votre hôtel</a></li>
+        </ul>
+      </div>
 
-      <div class="column">
-        <article>
-          <a href="" class="moyen">
-            <img src="./images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="">
-          </a>
-        </article>
-
-        <article>
-          <a href="" class="moyen">
-            <img src="./images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="">
-          </a>
-        </article>
+      <div class="footer_item">
+        <h4>Assistance</h4>
+        <ul>
+          <li><a href="">Centre d'aide</a></li>
+          <li><a href="">Nous contacter</a></li>
+        </ul>
       </div>
     </div>
-  </section> -->
-
-  <footer>
-
-  </footer>
+  </footer> -->
 
 </body>
 
